--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -44,8 +44,6 @@ services:
     build:
       context: frontend
       dockerfile: Dockerfile
-    deploy:
-      replicas: 1
     ports:
       - 9000:9000
     networks: 
@@ -57,7 +55,6 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./ngnix.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - dockernet
-
